--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,12 +2,15 @@
   --while-color: #fff;
   --black-color: #000;
   --text-color: #333;
-  --btn-color: #b8100d;
+  --primary-color: #b8100d;
+  --sub-text-color: #8c8c8c;
 }
 
 * {
   /* Kế thừa từ thẻ chứa nó */
   box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
 
 html {
@@ -16,3 +19,28 @@ html {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
+@keyframes slide {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/* Main CSS */
+
+/* Khang CSS */
+
+/* Thai CSS */
+
+/* Vu Css */
